--- a/reco/templates/reco/profile.html
+++ b/reco/templates/reco/profile.html
@@ -32,7 +32,7 @@
                         {% endfor %}
                     {% endif %}
 
-                    <form method="post" action="{% url 'profile' %}">
+                    <form method="post" action="{% url 'reco:profile' %}">
                         {% csrf_token %}
                         
                         <!-- User Info Section -->
