--- a/reco/templates/reco/base.html
+++ b/reco/templates/reco/base.html
@@ -38,28 +38,28 @@
                     </li>
                     {% if user.is_authenticated %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'dashboard' %}"><i class="fas fa-chart-line me-1"></i> Tableau de bord</a>
+                        <a class="nav-link" href="{% url 'reco:dashboard' %}"><i class="fas fa-chart-line me-1"></i> Tableau de bord</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'recommendations_view' %}"><i class="fas fa-star me-1"></i> Recommandations</a>
+                        <a class="nav-link" href="{% url 'reco:recommendations' %}"><i class="fas fa-star me-1"></i> Recommandations</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="userDropdown" role="button" data-bs-toggle="dropdown">
                             <i class="fas fa-user-circle me-1"></i> {{ user.username }}
                         </a>
                         <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="{% url 'profile' %}"><i class="fas fa-user-edit me-2"></i> Profil</a></li>
+                            <li><a class="dropdown-item" href="{% url 'reco:profile' %}"><i class="fas fa-user-edit me-2"></i> Profil</a></li>
                             <li><a class="dropdown-item" href="/admin/"><i class="fas fa-cog me-2"></i> Admin</a></li>
                             <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="{% url 'logout' %}"><i class="fas fa-sign-out-alt me-2"></i> Déconnexion</a></li>
+                            <li><a class="dropdown-item" href="{% url 'reco:logout' %}"><i class="fas fa-sign-out-alt me-2"></i> Déconnexion</a></li>
                         </ul>
                     </li>
                     {% else %}
                     <li class="nav-item">
-                        <a class="nav-link" href="{% url 'login' %}"><i class="fas fa-sign-in-alt me-1"></i> Connexion</a>
+                        <a class="nav-link" href="{% url 'reco:login' %}"><i class="fas fa-sign-in-alt me-1"></i> Connexion</a>
                     </li>
                     <li class="nav-item">
-                        <a class="btn btn-primary btn-sm ms-2" href="{% url 'register' %}">S'inscrire</a>
+                        <a class="btn btn-primary btn-sm ms-2" href="{% url 'reco:register' %}">S'inscrire</a>
                     </li>
                     {% endif %}
                 </ul>
