--- a/reco/templates/reco/login.html
+++ b/reco/templates/reco/login.html
@@ -44,7 +44,7 @@
                 <div class="text-center mt-4">
                     <p class="text-muted">
                         Pas encore de compte ? 
-                        <a href="{% url 'register' %}" class="text-primary fw-bold">S'inscrire</a>
+                        <a href="{% url 'reco:register' %}" class="text-primary fw-bold">S'inscrire</a>
                     </p>
                 </div>
 
